force-app/main/default/objects/HakkanYosanMaster__c/HakkanYosanMaster__c.object-meta.xml
<CustomObject>
    <label>発刊・予算マスタ</label>
    <nameField>
        <label>表題</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>