force-app/main/default/objects/HakkanYosanMaster__c/fields/baitai_code__c.field-meta.xml
<CustomField>
    <fullName>baitai_code__c</fullName>
    <label>媒体コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>