force-app/main/default/objects/HakkanYosanMaster__c/fields/hatsubaibi__c.field-meta.xml
<CustomField>
    <fullName>hatsubaibi__c</fullName>
    <label>発売日</label>
    <type>Date</type>
</CustomField>