force-app/main/default/objects/HakkanYosanMaster__c/fields/kouryoubi__c.field-meta.xml
<CustomField>
    <fullName>kouryoubi__c</fullName>
    <label>校了日</label>
    <type>Date</type>
</CustomField>