force-app/main/default/objects/HakkanYosanMaster__c/fields/menu__c.field-meta.xml
<CustomField>
    <fullName>menu__c</fullName>
    <label>メニュー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>menu</valueSetName>
    </valueSet>
</CustomField>