force-app/main/default/objects/HakkanYosanMaster__c/fields/seisaku_siharai_recordcount__c.field-meta.xml
<CustomField>
    <fullName>seisaku_siharai_recordcount__c</fullName>
    <label>制作支払レコード数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>