force-app/main/default/objects/HakkanYosanMaster__c/fields/yosan__c.field-meta.xml
<CustomField>
    <fullName>yosan__c</fullName>
    <label>予算（売上目標金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>