force-app/main/default/objects/HakkanYosanMaster__c/fields/yosansimebi__c.field-meta.xml
<CustomField>
    <fullName>yosansimebi__c</fullName>
    <label>予算締め日</label>
    <type>Date</type>
</CustomField>